Correctif bug z-index sur affichage chart VS appbar, sur page staking

--- a/src/pages/_elements/AppBar.module.scss
+++ b/src/pages/_elements/AppBar.module.scss
@@ -4,6 +4,7 @@
     display: none;                                  // Si largeur du viewport > breakpoint
     color: var(--primary-text-color-on-fill);
     background-color: var(--primary-fill);
+    z-index: 10;
 
     @media (max-width: $primary-breakpoint) {
         display: block;                             // Si largeur du viewport <= breakpoint
